--- a/index.html
+++ b/index.html
@@ -3,33 +3,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="css.style">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> 
-</head>
+</head> 
 <body>
-  Victor Crest
-  26
-  London
+  <main>
+    <div class="container">
+        <img src="images\image-victor.jpg" alt="profile-picture">
+        <h3 id="text-name">Victor Crest <span id="age">26</span></h3>
+        <h4 id="text-location">London</h4>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+        <div class="num-container">
+          <ul>
+            <li class="num-container li">
+              <h3>80K</h3>
+              <p>Followers</p>
+            </li>
+            <li class="num-container li">
+              <h3>803K</h3>
+              <p>Likes</p>
+            </li>
+            <li class="num-container li">
+              <h3>1.4K</h3>
+              <p>Photos</p>
+            </li>
+          </ul>
+        </div>
+    </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+</main>
+  
 </body>
 </html>
