--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="stylesheet" href="css.style">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet"> 
   <title>Frontend Mentor | Profile card component</title>
 </head> 
 <body>
-  <main>
-    <div class="container">
-        <img src="images\image-victor.jpg" alt="profile-picture">
+  <header class="header">
+    <svg id="svg-1" width="978" height="978" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="rotate(-135 489 489)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".5"/></svg>
+  </header>
+  <main> 
+    <div class="container">   
+        <img  id="profile" src="images\image-victor.jpg" alt="profile-picture"> 
+        <img id="bg-pattern"  src="images\bg-pattern-card.svg" alt="">  
         <h3 id="text-name">Victor Crest <span id="age">26</span></h3>
         <h4 id="text-location">London</h4>
-
+        <hr>
         <div class="num-container">
-          <ul>
+          <ul class="list">
             <li class="num-container li">
               <h3>80K</h3>
               <p>Followers</p>
@@ -30,11 +37,14 @@
             </li>
           </ul>
         </div>
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+          Coded by <a href="#">RJ</a>. 
+        </div> 
     </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <footer class="footer">
+       <svg  id="svg-2" width="978" height="978" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient x1="50%" y1=".779%" x2="50%" y2="100%" id="a"><stop stop-color="#0989B4" stop-opacity="0" offset="0%"/><stop stop-color="#53FFEE" offset="99.94%"/></linearGradient></defs><ellipse fill="url(#a)" transform="scale(1 -1) rotate(45 1669.55 0)" cx="489" cy="489" rx="489" ry="488" fill-rule="evenodd" opacity=".25"/></svg> 
+    </footer> 
 </main>
   
 </body>
